syntax = "proto3";
package cdrivermanager;

import "google/protobuf/empty.proto";


service DriverManager {
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
}

message HealthCheckResponse {
    bool living = 1;
}
